Increase z-index on header (fix bug with news ribbon).

--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -2,7 +2,7 @@
 .ga-header {
   position:fixed;
   width:100%;
-  z-index:1;
+  z-index:10;
   nav {
     .navbar-brand{
       margin-left:2rem;
